src/test/resources/org/nest/nestml/_cocos/valid/invalidTypeOfInvariant.nestml
neuron testNeuron:
    state:
        stateVar1 boolean = false
        stateVar2 real = 1.0 [[stateVar1]]
    end

    parameters:
    end

    internals:
    end

    input:
        spikeBuffer nS <- inhibitory excitatory spike
        currentBuffer <- current
    end

    output: spike

    update:

    end
end