src/test/resources/org/nest/nestml/_cocos/invalid/invalidTypeOfInvariant.nestml
neuron testNeuron:
    state:
        stateVar1 real = 1.0
        stateVar2 real = 1.0 [[stateVar1]]
        stateVar2 real = 1.0 [[2+2]]
    end

    parameters:
    end

    internals:
    end

    input:
        spikeBuffer nS <- inhibitory excitatory spike
        currentBuffer <- current
    end

    output: spike

    update:

    end
end